--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
-                <p>FATAL ERROR XX! OUR SISTEM WIL BE COMPLETELY ERASED!<p>
+                <p>FATAL ERROR XX ! YOUR SYSTEM WILL BE COMPLETELY ERASED!<p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
