--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
   <link rel="stylesheet" type="text/css" href="css/index.css" />
 
-  <title>Vibraci&oacute;n</title>
+    <title>Bater&iacute;a</title>
 
 </head>
 <body>
@@ -18,19 +18,18 @@
 	<div id="deviceready" class="blink">
 		<p class="event listening">Conectando al Dispositivo</p>
 	</div>
-	<h1>Vibraci&oacute;n</h1>
+	<h1>Bater&iacute;a</h1>
 	<div id="ready">
+		
 		<!-- Nuestro contenido HTML -->
-
-		<div class="botones">
-			<button type="button" id="vibrar1">Vibrar 1</button> <button type="button" id="vibrar2">Vibrar 2</button><br />
-		</div>
+		<p class="resultado">
+ 			<span id="resultado">No se ha mirado el estado de la bater&iacute;a</span><br />
+		</p>
 
 		<!-- Fin de nuestro contenido HTML -->
 
 	</div>
 </div>
-
 
 
 <script type="text/javascript" src="cordova.js"></script>
@@ -49,27 +48,45 @@
 		document.getElementById('deviceready').setAttribute('style', 'display:none;');
 		document.getElementById('ready').setAttribute('style', 'display:block;');
 		
-		document.getElementById('vibrar1').addEventListener("click", Vibrar1);
-		document.getElementById('vibrar2').addEventListener("click", Vibrar2);
+		// los eventos de bateria se deben enganchar a window y no a document.
+		// Sino no funciona !!!
+		// http://plugins.cordova.io/#/package/org.apache.cordova.battery-status
+		window.addEventListener('batterystatus', BateriaStatus, false);
+		window.addEventListener('batterylow', BateriaBaja, false);
+		window.addEventListener('batterycritical', BateriaCritica, false);
 	}
 
-    // Funcion que se ejecuta cuando se pulsa Vibrar 1
-    //
-    function Vibrar1() {
-    	// vibra durante 1000 milisegundos
-   		console.log('Se ha pulsado Vibrar 1');
-    	navigator.vibrate(1000);
-    }
+  // Funcion que muestra el estado de la bateria
+  //
+	function MostrarStatus(info){
+		var s = '<b>Estado de la bater&iacute;a</b><br/>';
+				s += 'Su carga es del ' + info.level + '%<br/>';
+				s += 'El dispositivo est&aacute; ' + (info.isPlugged ? 'enchufado' : 'desenchufado');
+		document.getElementById('resultado').innerHTML = s;
+	}
 
-    // Funcion que se ejecuta cuando se pulsa Vibrar 2
-    //
-    function Vibrar2() {
-   		console.log('Se ha pulsado Vibrar 2');
-    	// vibra durante 500 milisegundos
-    	// pausa durante 500 milisegundos
-    	// vibra durante 500 milisegundos
-    	navigator.vibrate( [500, 500, 500] );
-    }
+  // Funcion que llama el sistema para dar info del estado de la bateria
+  //
+	function BateriaStatus(info){
+		console.log('Llega informaci&oacute;n de la bater&iacute;a');
+		MostrarStatus(info);
+	}
+
+  // Funcion que llama el sistema cuando la bateria esta baja
+  //
+	function BateriaBaja(info){
+		console.log('Llega informaci&oacute;n de que la bater&iacute;a est&aacute; baja');
+		navigator.notification.alert('La bater&iacute;a est&aacute; baja');
+		MostrarStatus(info);
+	}
+
+  // Funcion que llama el sistema cuando la bateria esta muy baja
+  //
+	function BateriaCritica(info){
+		console.log('Llega informaci&oacute;n de que la bater&iacute;a est&aacute; muy baja');
+		navigator.notification.alert('La bater&iacute;a est&aacute; muy baja');
+		MostrarStatus(info);
+	}
 
   /////////////////////////////
 	// fin de nuestro codigo
