--- a/www/acc1.html
+++ b/www/acc1.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
   <link rel="stylesheet" type="text/css" href="css/index.css" />
 
-    <title>Acceleròmetre</title>
+  <title>Aceler&oacute;metro</title>
 
 </head>
 <body>
@@ -16,102 +16,117 @@
 
 <div class="app">
 	<div id="deviceready" class="blink">
-		<p class="event listening">Conectant al Dispositiu</p>
+		<p class="event listening">Conectando al Dispositivo</p>
 	</div>
-	<h1>Acceleròmetre</h1>
-	<div id="ready" style="display:none;">
-		
+	<h1>Aceler&oacute;metro</h1>
+	<div id="ready">
+
 		<!-- Nuestro contenido HTML -->
-		<button type="button" id="watchAcc">Començar</button>
-		<button type="button" id="stopAcc">Parar</button>
-		<button type="button" id="getAccc">Mirar</button>
-
-
-		<p class="resultat" >
- 			<span id="resultat"></span><br />
+		<div class="botones">
+			<button type="button" id="start">Empezar</button> <button type="button" id="stop">Parar</button> <button type="button" id="mirar">Mirar</button><br />
+		</div>
+		<p class="resultado">
+ 			Posici&oacute;n<br />
+ 			<span id="resultado">Aceler&oacute;metro parado</span><br />
+			<div id="cuadrado" style="width:60px;height:60px;background-color:green;position:absolute;left:50%;top:50%;margin-top:-30px;margin-right:-30px;"></div>
 		</p>
 
-		<!-- Fin de nuestro contenido HTML -->
-
 	</div>
+</div>
+
+
+
+
+
 </div>
 
 
 <script type="text/javascript" src="cordova.js"></script>
 <script type="text/javascript">
 
-  document.addEventListener('deviceready', onDeviceReady, false);
 
-  /////////////////////////////
+	document.addEventListener('deviceready', onDeviceReady, false);
+
 	// nuestro codigo
-  /////////////////////////////
+	var id = null;
 
- var watchID = null;
-
-  // funcion que se ejecuta cuando el dispositivo esta listo
+  // el dispositivo esta listo
   //
 	function onDeviceReady()
 	{
 		document.getElementById('deviceready').setAttribute('style', 'display:none;');
 		document.getElementById('ready').setAttribute('style', 'display:block;');
 		
-		document.getElementById('watchAcc').addEventListener("click", watchAcc);
-		document.getElementById('stopAcc').addEventListener("click", stopAcc);
-		document.getElementById('getAccc').addEventListener("click", getAccc);
-
+		document.getElementById('start').addEventListener("click", Empezar);
+		document.getElementById('stop').addEventListener("click", Parar);
+		document.getElementById('mirar').addEventListener("click", Mirar);
 	}
 
- 	function watchAcc(){
 
- 		console.log('XXXXXXXXXXXXXXXXXXX watch');
+    // Empezar a coger datos del acelerometro
+    //
+    function Empezar() {
+    		console.log('Se ha pulsado Empezar');
+    		if (!id) {
+	    		console.log('Se pide mirar la posicion');
+	        // Se actualiza cada 300 milisegundos
+	        var opciones = { frequency: 300 };
+	        id = navigator.accelerometer.watchAcceleration(onSuccess, onError, opciones);
+	    		console.log('Id = ' + id);
+	      }
+    }
 
- 		// comprovem que watchID és null => false
- 		if(! watchID ){
+    // Parar
+    //
+    function Parar() {
+    		console.log('Se ha pulsado Parar');
+        if (id) {
+            navigator.accelerometer.clearWatch(id);
+            id = null;
+		        document.getElementById('resultado').innerHTML = 'Aceler&oacute;metro parado';
+            
+        }
+    }
 
- 			var opcions = { frequency: 300 } ;
-			watchID = navigator.accelerometer.watchAcceleration(getAcccOK, getAcccError, opcions);
+    // Mirar los datos
+    //
+    function Mirar() {
+    		console.log('Se ha pulsado Mirar');
+        navigator.accelerometer.getCurrentAcceleration(onSuccess, onError);
+    }
+
+		function APorcentaje(n){
+			while(n>10) n--; // quitamos algun valor mayor que 10
+			while(n<-10) n++; // quitamos algun valor menor que -10
+			n += 10; // ahora n es un valor entre 0 y 20
+			return 100*n/20 + '%';
 		}
- 	}
 
- 	function stopAcc(){
+    // onSuccess: Obtiene la posicion actual
+    //
+    function onSuccess(acceleration) {
+    	 var salida = 'X = ' + acceleration.x + '<br />' +
+    	 							'Y = ' + acceleration.y + '<br />' +
+    	 							'Z = ' + acceleration.z + '<br />' +
+    	 							'T = ' + acceleration.timestamp + '<br />' +
+    	 							'x% = ' + APorcentaje(acceleration.x) + '<br />' +
+    	 							'y% = ' + APorcentaje(acceleration.y) + '<br />';
+    		console.log(salida);
+        document.getElementById('resultado').innerHTML = salida;
+				var x = acceleration.x; // el rango de valores va de -10 a 10 
+				var y = acceleration.y; // el rango de valores va de -10 a 10 
+				var z = acceleration.z; // el rango de valores va de -10 a 10 -> 10 = boca arriba y -10 = boca abajo
+				document.getElementById('cuadrado').style.left = APorcentaje(x);
+				document.getElementById('cuadrado').style.top = APorcentaje(y);
+				
+    }
 
- 		console.log('XXXXXXXXXXXXXXXXXXX stop');
+    // onError: Fallo al obtener la posicion
+    //
+    function onError() {
+        alert('Error acelerometro');
+    }
 
- 		// comprovem que watchID existeix
- 		if( watchID ){
- 			navigator.accelerometer.clearWatch(watchID);
- 			watchID = null;
-			document.getElementById('resultat').innerHTML = "S'ha aturat l'acceleròmetre" ;		
-		}
-
- 	}
-
- 	function getAccc(){
- 		navigator.accelerometer.getCurrentAcceleration(getAcccOK, getAcccError);
- 	}
-
-	function getAcccOK(acceleration){
-
-		document.getElementById('resultat').setAttribute('style', 'display:block;');
-
-	   var s ='Acceleration X: ' + acceleration.x + '<br/>' +
-	          'Acceleration Y: ' + acceleration.y + '<br/>' +
-	          'Acceleration Z: ' + acceleration.z + '<br/>' +
-	          'Timestamp: '      + acceleration.timestamp + '<br/>';
-
-	    document.getElementById('resultat').innerHTML = s ;
-
- 	}
-
- 	function getAcccError(acceleration){
-		document.getElementById('resultat').innerHTML = "No s'ha pogut mostrar valors acceleròmetre" ;
- 	}
-
-
-
-  /////////////////////////////
-	// fin de nuestro codigo
-  /////////////////////////////
 
 </script>
 
