--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
   <link rel="stylesheet" type="text/css" href="css/index.css" />
 
-  <title>Sonido</title>
+  <title>Br&uacute;jula</title>
 
 </head>
 <body>
@@ -18,165 +18,127 @@
 	<div id="deviceready" class="blink">
 		<p class="event listening">Conectando al Dispositivo</p>
 	</div>
-	<h1>Sonido</h1>
+	<h1>Br&uacute;jula</h1>
 	<div id="ready">
+		
 		<!-- Nuestro contenido HTML -->
-
 		<div class="botones">
-			<button type="button" id="rec">Grabar</button><br />
-			<button type="button" id="stop-rec">Parar grabaci&oacute;n</button><br /><br />
-			<button type="button" id="play">Reproducir</button><br />
-			<button type="button" id="play2">Reproducir</button><br />
+			<button type="button" id="start">Empezar</button> <button type="button" id="stop">Parar</button> <button type="button" id="mirar">Mirar</button><br />
 		</div>
 		<p class="resultado">
- 			Se grabar&aacute; un m&aacute;ximo de 10 segundos<br />
- 			<span id="resultado"></span><br />
+ 			Posici&oacute;n<br />
+ 			<span id="resultado">Br&uacute;jula parada</span><br />
 		</p>
+		<div id="brujula">
+			<div class="cardinal" id="norte">N</div>
+			<div class="cardinal" id="sur">S</div>
+			<div class="cardinal" id="este">E</div>
+			<div class="cardinal" id="oeste">O</div>
+		</div>
 
 		<!-- Fin de nuestro contenido HTML -->
+
 
 	</div>
 </div>
 
 
 
+
+
+
 <script type="text/javascript" src="cordova.js"></script>
 <script type="text/javascript">
 
-  document.addEventListener('deviceready', onDeviceReady, false);
+	document.addEventListener('deviceready', onDeviceReady, false);
 
-  /////////////////////////////
 	// nuestro codigo
-  /////////////////////////////
-  
-  var fichero = 'migrabacion.arm';
-  var mediaRec = null;
-  var bGrabando = false;
-  var recTimer = null;
+	var idBrujula = null;
 
-	function MostrarBoton(boton){
-		document.getElementById('rec').setAttribute('style', 'display:none;');
-		document.getElementById('stop-rec').setAttribute('style', 'display:none;');
-		document.getElementById('play').setAttribute('style', 'display:none;');
-		if( boton ){
-			document.getElementById(boton).setAttribute('style', 'display:block;');
-		}
-	}
-
-  // funcion que se ejecuta cuando el dispositivo esta listo
+  // el dispositivo esta listo
   //
 	function onDeviceReady()
 	{
 		document.getElementById('deviceready').setAttribute('style', 'display:none;');
 		document.getElementById('ready').setAttribute('style', 'display:block;');
 		
-		document.getElementById('rec').addEventListener("click", Grabar);
-		document.getElementById('stop-rec').addEventListener("click", Parar);
-		document.getElementById('play').addEventListener("click", Play);
-		document.getElementById('play2').addEventListener("click", Play2);
-		MostrarBoton('rec');
+		document.getElementById('start').addEventListener("click", Empezar);
+		document.getElementById('stop').addEventListener("click", Parar);
+		document.getElementById('mirar').addEventListener("click", Mirar);
 	}
 
-  // Funcion para parar la grabacion
-  //
-  function PararGrabacion() {
-  	if( bGrabando ){
-  		bGrabando = false;
-			if( recTimer ){
-				clearInterval(recTimer);
-				recTimer = null;
-			}
-			MostrarBoton('play');
-			if( mediaRec ){
-				mediaRec.stopRecord();
-			}
+
+    // Empezar a coger datos de la brujula
+    //
+    function Empezar() {
+    		console.log('Se ha pulsado Empezar');
+    		if (!idBrujula) {
+	    		console.log('Se pide mirar la posicion');
+	        // Se actualiza cada 300 milisegundos
+	        var opciones = { frequency: 300 };
+	        idBrujula = navigator.compass.watchHeading(onSuccess, onError, opciones);
+	    		console.log('Id = ' + idBrujula);
+	      }
+    }
+
+    // Parar
+    //
+    function Parar() {
+    		console.log('Se ha pulsado Parar');
+        if (idBrujula) {
+            navigator.compass.clearWatch(idBrujula);
+            idBrujula = null;
+		        document.getElementById('resultado').innerHTML = 'Br&uacute;jula parada';
+            
+        }
+    }
+
+    // Mirar los datos de la brujula
+    //
+    function Mirar() {
+    		console.log('Se ha pulsado Mirar');
+    		if (!idBrujula) {
+	    		console.log('Se pide mirar la posicion');
+	        navigator.compass.getCurrentHeading(onSuccess, onError);
+	      }
+    }
+
+		function AsignarPosicion(grados,cardinal,n){
+			grados %= 360;
+			var rad = 2*Math.PI*grados/360;
+			var x = Math.round(250 * (Math.cos(rad)+1));
+			var y = 500 - Math.round(250 * (Math.sin(rad)+1));
+  		// s += '<br />';
+			// s += ' ' + grados + ' grados = ' + rad + 'radianes<br>';
+			// s += 'x = ' + x + '<br>';
+			// s += 'y = ' + y + '<br>';
+			document.getElementById( cardinal ).style.left = (x-15) + 'px' ;
+			document.getElementById( cardinal ).style.top = ((y -n*30)-15) + 'px';
 		}
-	}
 
-  // Funcion que se ejecuta cuando se produce un error al grabar
-  //
-	function onError(error) {
-		var s = 'Se ha producido un error al grabar el sonido<br />' +
-						'Mensaje de error: ' + error.message + '<br />' +
-						'C&oacute;odigo de error: ' + error.code + '<br />';
-		document.getElementById('resultado').innerHTML = s;
- 		bGrabando = false;
-  	mediaRec = null;
-		MostrarBoton('rec');
-	}
-	
-	function onSuccess(){
-		document.getElementById('resultado').innerHTML = 'Grabaci&oacute;n correcta. Se han grabado ' + mediaRec.getDuration();
-		MostrarBoton('play');
-  }
+    // onSuccess: Obtiene la posicion actual
+    //
+    function onSuccess(heading) {
+  		var s = 'Apunta a: ' + heading.magneticHeading;
+  		console.log(s);
+      document.getElementById('resultado').innerHTML = s;
+			document.getElementById('brujula').setAttribute('style', 'display:block;');
+			var gradosNorte = 90 + heading.magneticHeading;
+			AsignarPosicion( gradosNorte, 'norte', 0 );
+			AsignarPosicion( gradosNorte + 180, 'sur', 1 );
+			AsignarPosicion( gradosNorte - 90, 'este', 2 );
+			AsignarPosicion( gradosNorte + 90, 'oeste', 3 );
+			
+			// document.getElementById('norte').style.left= x + 'px';
+			// document.getElementById('norte').style.top= y + 'px';
+    }
 
+    // onError: Fallo al obtener la posicion
+    //
+    function onError(compassError) {
+        alert('Error br&uacute;jula: ' + compassError.code);
+    }
 
-
-  // Funcion que se ejecuta cuando se pulsa Grabar
-  //
-  function Grabar() {
-		console.log('Se ha pulsado Grabar');
-		MostrarBoton('stop-rec');
-
-		mediaRec = new Media(fichero, onSuccess, onError);
-		// Record audio
-		mediaRec.startRecord();
-		bGrabando = true;
-		// Stop recording after 10 sec
-		var recTime = 0;
-		recTimer = setInterval(
-			function(){
-				recTime = recTime + 1;
-				document.getElementById('resultado').innerHTML = 'Grabados ' + recTime + ' segundos';
-				if(recTime >= 10) {
-					PararGrabacion();
-				}
-			}, 1000
-		);
-  }
-
-  // Funcion que se ejecuta cuando se pulsa Parar
-  //
-  function Parar() {
-		console.log('Se ha pulsado Parar');
-		PararGrabacion();
-  }
-
-  // Funcion que se ejecuta cuando se pulsa Play
-  //
-  function Play() {
-		console.log('Se ha pulsado Play');
-		if( mediaRec ){
-			MostrarBoton(null);
-			media.seekTo(0);
-			media.play();
-			MostrarBoton('rec');
-		}
-  }
-
-  // Funcion que se ejecuta cuando se pulsa Play2
-  //
-  function Play2() {
-		console.log('Se ha pulsado Play2');
-		media = new Media('http://audio.ibeat.org/content/p1rj1s/p1rj1s_-_rockGuitar.mp3', onSuccess2, onError2);
-		media.play();
-  }
-
-	function onSuccess2(){
-		document.getElementById('resultado').innerHTML = 'Reproducci&oacute;n correcta.';
-  }
-	function onError(error) {
-		var s = 'Se ha producido un error al reproducir la canci&oacute;<br />' +
-						'Mensaje de error: ' + error.message + '<br />' +
-						'C&oacute;odigo de error: ' + error.code + '<br />';
-		document.getElementById('resultado').innerHTML = s;
-	}
-	
-
-
-  /////////////////////////////
-	// fin de nuestro codigo
-  /////////////////////////////
 
 </script>
 
