--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
   <meta name="msapplication-tap-highlight" content="no" />
   <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-  <link rel="stylesheet" type="text/css" href="css/comp.css" />
+  <link rel="stylesheet" type="text/css" href="css/index.css" />
 
   <title>Br&uacute;jula</title>
 
@@ -54,6 +54,7 @@
 
 	// nuestro codigo
 	var idBrujula = null;
+	var ancho = window.innerWidth - 100;
 
   // el dispositivo esta listo
   //
@@ -106,8 +107,8 @@
 		function AsignarPosicion(grados,cardinal,n){
 			grados %= 360;
 			var rad = 2*Math.PI*grados/360;
-			var x = Math.round(250 * (Math.cos(rad)+1));
-			var y = 500 - Math.round(250 * (Math.sin(rad)+1));
+			var x = Math.round(ancho/2 * (Math.cos(rad)+1));
+			var y = Math.round(ancho - Math.round(ancho/2 * (Math.sin(rad)+1)));
   		// s += '<br />';
 			// s += ' ' + grados + ' grados = ' + rad + 'radianes<br>';
 			// s += 'x = ' + x + '<br>';
@@ -123,6 +124,10 @@
   		console.log(s);
       document.getElementById('resultado').innerHTML = s;
 			document.getElementById('brujula').setAttribute('style', 'display:block;');
+			
+			document.getElementById('brujula').style.width = Math.round(ancho) + "px";
+			document.getElementById('brujula').style.height = Math.round(ancho) + "px";
+			document.getElementById('brujula').style.margin = "50px";
 			var gradosNorte = 90 + heading.magneticHeading;
 			AsignarPosicion( gradosNorte, 'norte', 0 );
 			AsignarPosicion( gradosNorte + 180, 'sur', 1 );
